--- a/config.json
+++ b/config.json
@@ -6,8 +6,8 @@
     "password": "YORPASSWORD",
     
     "listenOn": "TCP",
+    "useEnv": true,
     "ip": "0.0.0.0",
     "port": 3000,
-    "unix": "/var/tmp/node.sock" 
-    
+    "unix": "/var/tmp/node.sock"
 }
